--- a/branches/vinculacion/WebContent/css/demo.css
+++ b/branches/vinculacion/WebContent/css/demo.css
@@ -15,11 +15,11 @@ h2 {
 .overlay-container {
 	display: none;
 	content: " ";
-	height: 95%;
-	width: 80%;
+	height: 100%;
+	width: 100%;
 	position: absolute;
-	left: 10%;
-	top: 15px;
+	left: 0%;
+	top: 0%;
 	background: -moz-radial-gradient(center, ellipse cover, rgba(127, 127, 127, 0)
 		0%, rgba(127, 127, 127, 0.9) 100% );
 	background: -webkit-gradient(radial, center center, 0px, center center, 100%,
@@ -68,6 +68,8 @@ h2 {
 	-moz-transform: scale(1.2);
 	-ms-transform: scale(1.2);
 	transform: scale(1.2);
+	margin-top: -60px;
+	width: 50%
 }
 
 .window-container-visible {
